radio & flatpak theme

--- a/DATA/Reglages/panel.conf
+++ b/DATA/Reglages/panel.conf
@@ -3,12 +3,12 @@ alttab-switcher-delay=100
 app-menu-label='Menu'
 desklet-decorations=0
 desklet-snap-interval=15
-enabled-applets=['panel1:right:30:notifications@cinnamon.org:21', 'panel1:right:3:printers@cinnamon.org:22', 'panel1:right:4:removable-drives@cinnamon.org:23', 'panel1:right:26:network@cinnamon.org:26', 'panel1:right:28:power@cinnamon.org:28', 'panel1:right:20:calendar@cinnamon.org:29', 'panel1:right:29:spacer@cinnamon.org:34', 'panel1:right:22:spacer@cinnamon.org:36', 'panel1:right:24:spacer@cinnamon.org:37', 'panel1:right:23:spacer@cinnamon.org:38', 'panel1:right:17:spacer@cinnamon.org:42', 'panel1:right:16:spacer@cinnamon.org:43', 'panel1:right:18:spacer@cinnamon.org:44', 'panel1:right:13:spacer@cinnamon.org:46', 'panel1:right:14:spacer@cinnamon.org:47', 'panel1:right:12:spacer@cinnamon.org:48', 'panel1:right:8:radio@driglu4it:63', 'panel1:left:0:Cinnamenu@json:64', 'panel1:left:3:grouped-window-list@cinnamon.org:65', 'panel1:left:2:spacer@cinnamon.org:67', 'panel1:right:27:sound150@claudiux:68', 'panel1:right:25:ifstat@tagadan:69', 'panel1:right:21:timer@Severga:70', 'panel1:right:19:weather@mockturtl:72', 'panel1:right:15:force-quit@cinnamon.org:73', 'panel1:right:11:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:10:smallcalc_applet@lerc.sds:75', 'panel1:right:9:color-picker@fmete:76', 'panel1:right:6:show-hide-applets@mohammad-sn:78', 'panel1:right:5:gpaste-reloaded@feuerfuchs.eu:81', 'panel1:right:2:bluetooth-battery@zamszowy:83', 'panel1:right:1:xapp-status@cinnamon.org:84', 'panel1:right:7:systray@cinnamon.org:85']
+enabled-applets=['panel1:right:30:notifications@cinnamon.org:21', 'panel1:right:3:printers@cinnamon.org:22', 'panel1:right:4:removable-drives@cinnamon.org:23', 'panel1:right:26:network@cinnamon.org:26', 'panel1:right:28:power@cinnamon.org:28', 'panel1:right:20:calendar@cinnamon.org:29', 'panel1:right:29:spacer@cinnamon.org:34', 'panel1:right:22:spacer@cinnamon.org:36', 'panel1:right:24:spacer@cinnamon.org:37', 'panel1:right:23:spacer@cinnamon.org:38', 'panel1:right:17:spacer@cinnamon.org:42', 'panel1:right:16:spacer@cinnamon.org:43', 'panel1:right:18:spacer@cinnamon.org:44', 'panel1:right:13:spacer@cinnamon.org:46', 'panel1:right:14:spacer@cinnamon.org:47', 'panel1:right:12:spacer@cinnamon.org:48', 'panel1:left:0:Cinnamenu@json:64', 'panel1:right:27:sound150@claudiux:68', 'panel1:right:25:ifstat@tagadan:69', 'panel1:right:21:timer@Severga:70', 'panel1:right:19:weather@mockturtl:72', 'panel1:right:15:force-quit@cinnamon.org:73', 'panel1:right:10:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:9:smallcalc_applet@lerc.sds:75', 'panel1:right:8:color-picker@fmete:76', 'panel1:right:6:show-hide-applets@mohammad-sn:78', 'panel1:right:5:gpaste-reloaded@feuerfuchs.eu:81', 'panel1:right:2:xapp-status@cinnamon.org:84', 'panel1:right:7:systray@cinnamon.org:85', 'panel1:right:11:Radio3.0@claudiux:86', 'panel1:left:2:windows-quick-list@cinnamon.org:87']
 enabled-desklets=['cpuload@kimse:0:15:645', 'diskspace@schorschii:2:120:750', 'diskspace@schorschii:6:120:645', 'diskspace@schorschii:7:120:855']
 enabled-extensions=['transparent-panels@germanfr', 'mouse-shake-zoom@rcalixte']
 favorite-apps=['mintinstall.desktop', 'cinnamon-settings.desktop', 'org.gnome.Terminal.desktop', 'nemo.desktop']
 lock-desklets=true
-next-applet-id=86
+next-applet-id=88
 next-desklet-id=8
 panel-edit-mode=false
 panel-launchers=['DEPRECATED']
@@ -41,14 +41,14 @@ exec-arg='--'
 [desktop/background]
 picture-opacity=100
 picture-options='zoom'
-picture-uri='file:///home/harry/Images/Wallpapers/aholmes_moraine_lake.jpg'
+picture-uri='file:///usr/share/backgrounds/Wallpapers/lpreda_lily.jpg'
 primary-color='#000000'
 secondary-color='#000000'
 
 [desktop/background/slideshow]
 delay=13
 directory='file:///usr/share/backgrounds/linuxmint'
-image-source='directory:///home/harry/Images/Wallpapers'
+image-source='directory:///usr/share/backgrounds/Wallpapers'
 random-order=true
 slideshow-enabled=true
 
@@ -93,6 +93,21 @@ mouse-button-modifier=''
 num-workspaces=9
 theme='Mint-Y'
 workspace-names=['Accueil', 'Espace de travail', 'IDE', 'Terminal', 'Navigateur', 'Design', 'Outyput', 'Communications', 'Chat GPT']
+
+[gestures]
+swipe-down-2='PUSH_TILE_DOWN::end'
+swipe-down-3='TOGGLE_OVERVIEW::end'
+swipe-down-4='VOLUME_DOWN::end'
+swipe-left-2='PUSH_TILE_LEFT::end'
+swipe-left-3='WORKSPACE_NEXT::end'
+swipe-left-4='WINDOW_WORKSPACE_PREVIOUS::end'
+swipe-right-2='PUSH_TILE_RIGHT::end'
+swipe-right-3='WORKSPACE_PREVIOUS::end'
+swipe-right-4='WINDOW_WORKSPACE_NEXT::end'
+swipe-up-2='PUSH_TILE_UP::end'
+swipe-up-3='TOGGLE_EXPO::end'
+swipe-up-4='VOLUME_UP::end'
+tap-3='MEDIA_PLAY_PAUSE::end'
 
 [muffin]
 draggable-border-width=10
