--- a/DATA/Reglages/panel.conf
+++ b/DATA/Reglages/panel.conf
@@ -3,18 +3,18 @@ alttab-switcher-delay=100
 app-menu-label='Menu'
 desklet-decorations=0
 desklet-snap-interval=15
-enabled-applets=['panel1:right:27:notifications@cinnamon.org:21', 'panel1:right:23:network@cinnamon.org:26', 'panel1:right:25:power@cinnamon.org:28', 'panel1:right:18:calendar@cinnamon.org:29', 'panel1:right:26:spacer@cinnamon.org:34', 'panel1:right:20:spacer@cinnamon.org:36', 'panel1:right:22:spacer@cinnamon.org:37', 'panel1:right:21:spacer@cinnamon.org:38', 'panel1:right:15:spacer@cinnamon.org:42', 'panel1:right:14:spacer@cinnamon.org:43', 'panel1:right:16:spacer@cinnamon.org:44', 'panel1:right:11:spacer@cinnamon.org:46', 'panel1:right:12:spacer@cinnamon.org:47', 'panel1:right:10:spacer@cinnamon.org:48', 'panel1:left:0:Cinnamenu@json:64', 'panel1:right:24:sound150@claudiux:68', 'panel1:right:19:timer@Severga:70', 'panel1:right:17:weather@mockturtl:72', 'panel1:right:13:force-quit@cinnamon.org:73', 'panel1:right:8:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:7:smallcalc_applet@lerc.sds:75', 'panel1:right:6:color-picker@fmete:76', 'panel1:right:4:show-hide-applets@mohammad-sn:78', 'panel1:right:1:xapp-status@cinnamon.org:84', 'panel1:right:5:systray@cinnamon.org:85', 'panel1:left:2:windows-quick-list@cinnamon.org:87', 'panel1:right:9:radio@driglu4it:88', 'panel1:right:2:printers@cinnamon.org:89', 'panel1:right:3:gpaste-reloaded@feuerfuchs.eu:90']
-enabled-desklets=['cpuload@kimse:0:15:600', 'diskspace@schorschii:2:120:810', 'diskspace@schorschii:6:15:915', 'diskspace@schorschii:7:15:810']
+enabled-applets=['panel1:right:21:notifications@cinnamon.org:21', 'panel1:right:17:network@cinnamon.org:26', 'panel1:right:19:power@cinnamon.org:28', 'panel1:right:14:calendar@cinnamon.org:29', 'panel1:right:20:spacer@cinnamon.org:34', 'panel1:right:16:spacer@cinnamon.org:38', 'panel1:right:12:spacer@cinnamon.org:42', 'panel1:right:10:spacer@cinnamon.org:48', 'panel1:left:0:Cinnamenu@json:64', 'panel1:right:18:sound150@claudiux:68', 'panel1:right:15:timer@Severga:70', 'panel1:right:13:weather@mockturtl:72', 'panel1:right:8:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:7:smallcalc_applet@lerc.sds:75', 'panel1:right:3:color-picker@fmete:76', 'panel1:right:4:show-hide-applets@mohammad-sn:78', 'panel1:right:0:xapp-status@cinnamon.org:84', 'panel1:right:5:systray@cinnamon.org:85', 'panel1:left:2:windows-quick-list@cinnamon.org:87', 'panel1:right:9:radio@driglu4it:88', 'panel1:right:1:printers@cinnamon.org:89', 'panel1:right:2:gpaste-reloaded@feuerfuchs.eu:90', 'panel1:right:11:panel-launchers@cinnamon.org:91']
+enabled-desklets=['cpuload@kimse:0:30:585', 'diskspace@schorschii:2:240:1320', 'diskspace@schorschii:6:240:1215', 'diskspace@schorschii:7:345:1320', 'bbcwx@oak-wood.co.uk:9:900:540', 'dual-datetime@rcalixte:10:480:540']
 enabled-extensions=['transparent-panels@germanfr', 'mouse-shake-zoom@rcalixte']
 favorite-apps=['mintinstall.desktop', 'cinnamon-settings.desktop', 'org.gnome.Terminal.desktop', 'nemo.desktop']
-lock-desklets=false
-next-applet-id=91
-next-desklet-id=8
+lock-desklets=true
+next-applet-id=92
+next-desklet-id=13
 panel-edit-mode=false
 panel-launchers=['DEPRECATED']
-panel-zone-icon-sizes='[{"panelId": 1, "left": 16, "center": 0, "right": 0}]'
-panel-zone-symbolic-icon-sizes='[{"panelId": 1, "left": 13, "center": 28, "right": 16}]'
-panel-zone-text-sizes='[{"panelId": 1, "left": 6.5, "center": 0.0, "right": 0.0}]'
+panel-zone-icon-sizes='[{"panelId": 1, "left": 16, "center": 16, "right": 16}]'
+panel-zone-symbolic-icon-sizes='[{"panelId": 1, "left": 16, "center": 16, "right": 16}]'
+panel-zone-text-sizes='[{"panelId": 1, "left": 10.0, "center": 10.0, "right": 10.0}]'
 panels-autohide=['1:intel']
 panels-enabled=['1:0:top']
 panels-height=['1:22']
@@ -41,7 +41,7 @@ exec-arg='--'
 [desktop/background]
 picture-opacity=100
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/Wallpapers/vfriedl_hepatica.jpg'
+picture-uri='file:///usr/share/backgrounds/Wallpapers/mpiwnicki_torres_del_paine.jpg'
 primary-color='#000000'
 secondary-color='#000000'
 
