--- a/DATA/Reglages/panel.conf
+++ b/DATA/Reglages/panel.conf
@@ -3,12 +3,12 @@ alttab-switcher-delay=100
 app-menu-label='Menu'
 desklet-decorations=0
 desklet-snap-interval=15
-enabled-applets=['panel1:right:22:notifications@cinnamon.org:21', 'panel1:right:18:network@cinnamon.org:26', 'panel1:right:20:power@cinnamon.org:28', 'panel1:right:15:calendar@cinnamon.org:29', 'panel1:right:17:spacer@cinnamon.org:38', 'panel1:right:13:spacer@cinnamon.org:42', 'panel1:right:10:spacer@cinnamon.org:48', 'panel1:left:0:Cinnamenu@json:64', 'panel1:right:16:timer@Severga:70', 'panel1:right:14:weather@mockturtl:72', 'panel1:right:8:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:7:smallcalc_applet@lerc.sds:75', 'panel1:right:4:color-picker@fmete:76', 'panel1:right:5:show-hide-applets@mohammad-sn:78', 'panel1:right:1:xapp-status@cinnamon.org:84', 'panel1:right:6:systray@cinnamon.org:85', 'panel1:left:2:windows-quick-list@cinnamon.org:87', 'panel1:right:9:radio@driglu4it:88', 'panel1:right:2:printers@cinnamon.org:89', 'panel1:right:3:gpaste-reloaded@feuerfuchs.eu:90', 'panel1:right:19:sound@cinnamon.org:92', 'panel1:right:12:force-quit@cinnamon.org:93']
-enabled-desklets=['cpuload@kimse:0:30:585', 'diskspace@schorschii:2:240:1320', 'diskspace@schorschii:6:240:1215', 'diskspace@schorschii:7:345:1320', 'bbcwx@oak-wood.co.uk:9:900:540', 'dual-datetime@rcalixte:10:480:540']
+enabled-applets=['panel1:right:21:notifications@cinnamon.org:21', 'panel1:right:17:network@cinnamon.org:26', 'panel1:right:19:power@cinnamon.org:28', 'panel1:right:14:calendar@cinnamon.org:29', 'panel1:right:16:spacer@cinnamon.org:38', 'panel1:right:12:spacer@cinnamon.org:42', 'panel1:right:10:spacer@cinnamon.org:48', 'panel1:left:0:Cinnamenu@json:64', 'panel1:right:15:timer@Severga:70', 'panel1:right:13:weather@mockturtl:72', 'panel1:right:8:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:7:smallcalc_applet@lerc.sds:75', 'panel1:right:4:color-picker@fmete:76', 'panel1:right:5:show-hide-applets@mohammad-sn:78', 'panel1:right:1:xapp-status@cinnamon.org:84', 'panel1:right:6:systray@cinnamon.org:85', 'panel1:left:2:windows-quick-list@cinnamon.org:87', 'panel1:right:9:radio@driglu4it:88', 'panel1:right:2:printers@cinnamon.org:89', 'panel1:right:3:gpaste-reloaded@feuerfuchs.eu:90', 'panel1:right:18:sound@cinnamon.org:92', 'panel1:right:11:force-quit@cinnamon.org:93', 'panel1:right:20:spacer@cinnamon.org:95']
+enabled-desklets=['cpuload@kimse:0:495:570', 'diskspace@schorschii:2:240:1320', 'diskspace@schorschii:6:240:1215', 'diskspace@schorschii:7:345:1320', 'bbcwx@oak-wood.co.uk:9:15:510', 'dual-datetime@rcalixte:10:495:510']
 enabled-extensions=['transparent-panels@germanfr', 'mouse-shake-zoom@rcalixte']
 favorite-apps=['mintinstall.desktop', 'cinnamon-settings.desktop', 'org.gnome.Terminal.desktop', 'nemo.desktop']
 lock-desklets=true
-next-applet-id=94
+next-applet-id=96
 next-desklet-id=13
 panel-edit-mode=false
 panel-launchers=['DEPRECATED']
@@ -44,7 +44,7 @@ exec-arg='--'
 [desktop/background]
 picture-opacity=100
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/Wallpapers/mpiwnicki_sunset.jpg'
+picture-uri='file:///usr/share/backgrounds/Wallpapers/bfantinatti_orchid.jpg'
 primary-color='#000000'
 secondary-color='#000000'
 
@@ -53,16 +53,17 @@ delay=13
 directory='file:///usr/share/backgrounds/linuxmint'
 image-source='directory:///usr/share/backgrounds/Wallpapers'
 random-order=true
-slideshow-enabled=false
+slideshow-enabled=true
 
 [desktop/interface]
 cursor-size=24
 cursor-theme='capitaine-cursors'
 enable-animations=false
+font-name='Ubuntu 12'
 gtk-enable-primary-paste=false
 gtk-theme='Mint-L-Dark-Blue'
 icon-theme='Mint-L-Blue'
-text-scaling-factor=1.2000000000000002
+text-scaling-factor=0.89999999999999991
 toolkit-accessibility=false
 
 [desktop/media-handling]
@@ -76,13 +77,13 @@ notification-duration=3
 remove-old=true
 
 [desktop/peripherals/keyboard]
-numlock-state=true
+numlock-state=false
 
 [desktop/peripherals/mouse]
 accel-profile='flat'
 double-click=400
 drag-threshold=10
-speed=0.0
+speed=0.44269662921348307
 
 [desktop/peripherals/touchpad]
 speed=0.0
@@ -100,6 +101,7 @@ min-window-opacity=30
 mouse-button-modifier=''
 num-workspaces=9
 theme='Mint-Y'
+titlebar-font='Ubuntu Medium 10'
 workspace-names=['Accueil', 'IA', 'IDE', 'Terminal', 'Navigateur', 'Design', 'Output', 'Communications', 'Médias']
 
 [gestures]
@@ -123,9 +125,10 @@ memory-limit=2048
 
 [muffin]
 draggable-border-width=10
+experimental-features=['scale-monitor-framebuffer', 'x11-randr-fractional-scaling']
 
 [settings-daemon/peripherals/keyboard]
-numlock-state='on'
+numlock-state='off'
 
 [settings-daemon/peripherals/touchscreen]
 orientation-lock=true
