--- a/DATA/Reglages/panel.conf
+++ b/DATA/Reglages/panel.conf
@@ -3,13 +3,14 @@ alttab-switcher-delay=100
 app-menu-label='Menu'
 desklet-decorations=0
 desklet-snap-interval=15
+device-aliases=['/org/freedesktop/UPower/devices/battery_BAT1:=Hewlett-Packard PABAS0241231']
 enabled-applets=['panel1:right:22:notifications@cinnamon.org:21', 'panel1:right:17:network@cinnamon.org:26', 'panel1:right:20:power@cinnamon.org:28', 'panel1:right:14:calendar@cinnamon.org:29', 'panel1:right:16:spacer@cinnamon.org:38', 'panel1:right:12:spacer@cinnamon.org:42', 'panel1:right:10:spacer@cinnamon.org:48', 'panel1:right:15:timer@Severga:70', 'panel1:right:13:weather@mockturtl:72', 'panel1:right:8:ScreenShot+RecordDesktop@tech71:74', 'panel1:right:7:smallcalc_applet@lerc.sds:75', 'panel1:right:5:color-picker@fmete:76', 'panel1:right:6:show-hide-applets@mohammad-sn:78', 'panel1:right:2:xapp-status@cinnamon.org:84', 'panel1:left:2:windows-quick-list@cinnamon.org:87', 'panel1:right:9:radio@driglu4it:88', 'panel1:right:3:printers@cinnamon.org:89', 'panel1:right:4:gpaste-reloaded@feuerfuchs.eu:90', 'panel1:right:11:force-quit@cinnamon.org:93', 'panel1:right:21:spacer@cinnamon.org:95', 'panel1:right:19:sound150@claudiux:96', 'panel1:left:0:menu@cinnamon.org:97']
-enabled-desklets=['cpuload@kimse:0:45:450', 'diskspace@schorschii:2:225:975', 'diskspace@schorschii:6:225:1065', 'diskspace@schorschii:7:225:885', 'bbcwx@oak-wood.co.uk:9:45:1155', 'dual-datetime@rcalixte:10:315:1050']
+enabled-desklets=['cpuload@kimse:13:15:720', 'diskspace@schorschii:14:225:720', 'diskspace@schorschii:15:225:510', 'diskspace@schorschii:16:225:615', 'bbcwx@oak-wood.co.uk:17:15:825', 'dual-datetime@rcalixte:18:315:720']
 enabled-extensions=['transparent-panels@germanfr', 'mouse-shake-zoom@rcalixte']
 favorite-apps=['nemo.desktop', 'org.gnome.Terminal.desktop', 'mintinstall.desktop', 'cinnamon-settings.desktop']
 lock-desklets=true
 next-applet-id=98
-next-desklet-id=13
+next-desklet-id=19
 panel-edit-mode=false
 panel-launchers=['DEPRECATED']
 panel-zone-icon-sizes='[{"panelId": 1, "left": 16, "center": 16, "right": 16}]'
@@ -44,7 +45,7 @@ exec-arg='--'
 [desktop/background]
 picture-opacity=100
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/Wallpapers/aburden_grass.jpg'
+picture-uri='file:///usr/share/backgrounds/Wallpapers/oram_blue_moon.jpg'
 primary-color='#000000'
 secondary-color='#000000'
 
@@ -53,7 +54,7 @@ delay=13
 directory='file:///usr/share/backgrounds/linuxmint'
 image-source='directory:///usr/share/backgrounds/Wallpapers'
 random-order=true
-slideshow-enabled=false
+slideshow-enabled=true
 
 [desktop/input-sources]
 sources=[('xkb', 'fr+latin9')]
@@ -86,7 +87,7 @@ numlock-state=true
 accel-profile='flat'
 double-click=400
 drag-threshold=10
-speed=0.44269662921348307
+speed=1.0
 
 [desktop/peripherals/touchpad]
 speed=0.0
@@ -144,7 +145,14 @@ orientation-lock=true
 night-light-last-coordinates=(48.866667, 2.3333330000000001)
 
 [settings-daemon/plugins/power]
+idle-brightness=30
+lid-close-ac-action='blank'
+lid-close-battery-action='suspend'
 lock-on-suspend=true
+sleep-display-ac=1800
+sleep-display-battery=600
+sleep-inactive-ac-timeout=300
+sleep-inactive-battery-timeout=600
 
 [settings-daemon/plugins/xsettings]
 menus-have-icons=false
